# NLP_ASSIGNMENT

./: README.md
nlp-llm-project/: pyproject.toml  requirements.txt
nlp-llm-project/src/: app.py  chat_memory.py  main.py  utils.py
nlp-llm-project/src/api/: chat_save.py  env.py  rag_query.py  test.py  tests.py
nlp-llm-project/src/conversations/: 2025-10-18_22-49-31-615117.json  2025-10-18_22-49-55-241022.json  2025-10-18_22-52-20-675663.json  2025-10-18_22-55-17-906743.json  2025-10-18_22-59-40-106332.json  2025-10-18_23-03-45-396370.json  2025-10-19_11-31-17-912119.json  2025-10-19_11-35-23-630445.json  2025-10-31_21-01-25-326826.json  2025-10-31_21-02-01-007491.json  2025-10-31_21-03-20-656050.json  2025-10-31_21-04-46-675175.json  2025-10-31_21-05-50-620537.json  2025-10-31_21-07-23-020471.json  2025-10-31_21-20-18-228759.json  chat_2025-10-18_21-57-01-388104.json  chat_2025-10-18_21-59-38-773118.json  chat_2025-10-18_22-01-42-613868.json  chat_2025-10-18_22-16-02-873809.json  chat_2025-10-18_22-26-00-064044.json
nlp-llm-project/src/eval/: evaluate.py
nlp-llm-project/src/models/: templates.py
nlp-llm-project/src/others/: gpt_client.py  interactive_quiz.py  schemas.py
nlp-llm-project/src/templates/: index.html
nlp-llm-project/src/training/: train.py
