[project]
name = "nlp-llm-project"
version = "0.1.0"
description = ""
authors = [
    {name = "joni"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.119.0,<0.120.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "datasets (>=4.2.0,<5.0.0)",
    "accelerate (>=1.10.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
